Fixed navigation on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -844,11 +844,12 @@ body {
       display: block;
       background-color: rgba(0, 0, 0, 0.85);
       width: 100%;
+      height: 100vh;
       padding: 1rem;
       opacity: 1; }
       .navigation__checkbox:checked ~ .row .navigation__nav .navigation__item {
         width: 100%;
-        margin: 0; }
+        margin: 3vh 0; }
       .navigation__checkbox:checked ~ .row .navigation__nav .navigation__link {
         margin: 0;
         padding: 0; } }
