--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -105,12 +105,13 @@
             display: block;
             background-color: rgba($color-black, .85);
             width: 100%;
+            height: 100vh;
             padding: 1rem;
             opacity: 1;
 
             & .navigation__item {
                 width: 100%;
-                margin: 0;
+                margin: 3vh 0;
             }
 
             & .navigation__link {
